files/gitea/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  annotations:
    cert-manager.io/cluster-issuer: issuer.placeholder-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - "domain.placeholder"
    secretName: keptn-tls
  rules:
    - host: "domain.placeholder"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port: 
                  number: 3000
